<resources>

    <!--to toggle the open close button
         of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">close</string>
    <string name="title_activity_login">Sign IN</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="please_enter_email">Please enter Email</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="error_for_password">Please Enter Minimum 3 Characters for Password</string>

    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_drawer1">DrawerActivity1</string>

    <string name="app_name">sheshank</string>
    <string name="dashbord">Dashbord</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="Share">Share</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="please_check_internet_connection">No Internet connection. Make sure that Wi-Fi or Mobile data is turned on, then try again.</string>
    <string name="login_failure">Login failed!!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">signout</string>
    <string name="menu_home_page">home_page</string>
    <string name="menu_Logout">Logout</string>
    <string name="menu_contacts">Contacts</string>
    <string name="welcome">"Welcome !"</string>
    <string name="title_activity_drawer2">DrawerActivity2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homepage">HomePage</string>
    <string name="HomePage">homepage</string>
</resources>