<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signin">



   <LinearLayout
       android:id="@+id/container"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:paddingLeft="16dp"
       android:paddingTop="16dp"
       android:paddingRight="16dp"
       android:paddingBottom="16dp"
       tools:context=".Signin">



      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="198dp"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="50dp"
          android:src="@drawable/login_icon"
          tools:ignore="MissingConstraints" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="40dp"
          android:gravity="center"
          android:text="Sign In"
          android:textColor="@color/colorAccent"
          android:textSize="20dp"
          android:textStyle="bold" />

      <LinearLayout
          android:layout_width="309dp"
          android:layout_height="wrap_content"
          android:layout_margin="20dp"
          android:background="@drawable/login_box_bg"
          android:elevation="5dp"
          android:gravity="center_horizontal"
          android:orientation="vertical"
          android:padding="30dp">

         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:hint="@string/prompt_email"
             android:padding="2dp">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white_shade"
                android:textSize="17sp" />
         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:hint="@string/prompt_password"
             android:padding="2dp"

             app:hintTextColor="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white_shade"
                android:textSize="17sp" />
         </com.google.android.material.textfield.TextInputLayout>

         <Button
             android:id="@+id/login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="48dp"
             android:enabled="false"
             android:text="sign_in"
             android:textColor="@color/colorPrimaryDark" />

      </LinearLayout>
   </LinearLayout>

   <ProgressBar
       android:id="@+id/loading"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerInParent="true"
       android:layout_gravity="center"
       android:visibility="gone" />


</RelativeLayout>